--- a/BE/slotifyBE/templates/userRegister.html
+++ b/BE/slotifyBE/templates/userRegister.html
@@ -297,7 +297,7 @@
       <div class="mt-8 text-center">
         <p class="text-gray-600">
           Already have an account? 
-          <a href="#" class="text-blue-600 font-semibold hover:text-blue-700 transition-colors">
+          <a href="/userSignIn" class="text-blue-600 font-semibold hover:text-blue-700 transition-colors">
             Sign in here
           </a>
         </p>
