Dynamic URLs updated & dynamic credentials generation functionaity created for parking lots

--- a/BE/Admin/templates/adminDashboard.html
+++ b/BE/Admin/templates/adminDashboard.html
@@ -752,7 +752,7 @@ document.addEventListener('click', async function(event) {
             
             // Then proceed with the original API call
        const payload = {
-  script_path: "C:/Users/jigsp/OneDrive/Desktop/Slotify/BE/parking_lot/label_parking_slots.py",
+  script_path: "../../BE/parking_lot/label_parking_slots.py",
   address: address
 };
 
